test/param/bharshbarg/refToGetFieldType.good
refToGetFieldType.chpl:14: error: Cannot set a reference to a type variable.
refToGetFieldType.chpl:19: error: Cannot set a reference to a type variable.
refToGetFieldType.chpl:19: error: Cannot set a reference to a type variable.
refToGetFieldType.chpl:19: error: Cannot set a reference to a param variable.
